# skyclaw

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  FEATURES.md  README.md  SETUP_FOR_PROS.md  SKYCLAW_ROADMAP.md  VISION.md
.github/workflows/: ci.yml  release.yml
crates/skyclaw-agent/: Cargo.toml
crates/skyclaw-agent/src/: circuit_breaker.rs  context.rs  delegation.rs  done_criteria.rs  executor.rs  history_pruning.rs  learning.rs  lib.rs  (+11 more)
crates/skyclaw-channels/: Cargo.toml
crates/skyclaw-core/: Cargo.toml
crates/skyclaw-filestore/: Cargo.toml
crates/skyclaw-gateway/: Cargo.toml
crates/skyclaw-observable/: Cargo.toml
crates/skyclaw-observable/src/: lib.rs  metrics.rs  otel.rs
crates/skyclaw-skills/: Cargo.toml
crates/skyclaw-skills/src/: lib.rs
crates/temm1e-cambium/: Cargo.toml
crates/temm1e-tools/: Cargo.toml
docs/: AGENTIC_CORE_ARCHITECTURE.md  AGENTIC_CORE_V2_BENCHMARK.md  AGENTIC_CORE_V2_PLAN.md  FULL_SWEEP_PROTOCOL.md  RBAC.md  RELEASE_PROTOCOL.md
docs/full-sweep-1/: README.md  fix-plan.md  phase-01-panic.md  phase-02-errors.md  phase-03-llm.md  phase-04-channels.md  phase-05-memory.md  phase-06-providers.md  phase-07-tools.md  phase-08-concurrency.md  phase-09-config.md  phase-10-watchdog.md  wave-1-report.md
docs/web_search/: HARMONY_AUDIT.md  IMPLEMENTATION_DETAILS.md  IMPLEMENTATION_PLAN.md  RESEARCH.md
scripts/: release_update_smoke.sh
src/: main.rs  update_assets.rs
tems_lab/: ARTIFACT_VALUE_FUNCTION.md  README.md
tems_lab/consciousness/: RESEARCH_PAPER.md
tems_lab/swarm/: AB_REPORT_JIT.md  ab_jit_runner.sh
(+158 files in other folders)
