[package]
name = "skyclaw-observable"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Observability and telemetry for SkyClaw"

[dependencies]
skyclaw-core.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
opentelemetry.workspace = true
tracing-opentelemetry.workspace = true
serde_json.workspace = true
async-trait.workspace = true

[dev-dependencies]
tokio.workspace = true
